fix status alignment

--- a/src/app/components/status/status.component.scss
+++ b/src/app/components/status/status.component.scss
@@ -1,8 +1,14 @@
 :host {
   display: flex;
+
+  ::ng-deep {
+    fs-filter-saved-filters-menu {
+      display: flex;
+    }
+  }
 }
 
-.sort-limits {
+.sort-limits, .saved-filters {
   display: flex;
 }
 
